# kino

./: .gitignore  Cargo.toml  README.md  deny.toml
.github/workflows/: rust.yml
examples/: barebones.rs
resources/rect-fill/: fragment.glsl  vertex.glsl
src/: canvas.rs  colors.rs  context.rs  gl.rs  lib.rs  prelude.rs  shaders.rs
